{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 530,
  "lineage": "a1e3c4b8-1193-596e-4061-d164b2ef1c72",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "lbpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "poclbpip",
            "fqdn": "poclbpip.centralus.cloudapp.azure.com",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.61.179.5",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "poc-lb-pip",
            "resource_group_name": "poc_rg",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm01mgmtpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-vm01-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.43.140.44",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "poc-vm01-mgmt-pip",
            "resource_group_name": "poc_rg",
            "sku": "Basic",
            "tags": {
              "Name": "f5env-vm01-mgmt-public-ip",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm02mgmtpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-vm02-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.61.153.193",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "poc-vm02-mgmt-pip",
            "resource_group_name": "poc_rg",
            "sku": "Basic",
            "tags": {
              "Name": "f5env-vm02-mgmt-public-ip",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/frontendIPConfigurations/LoadBalancerFrontEnd",
                "name": "LoadBalancerFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-lb-pip"
              }
            ],
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb",
            "location": "centralus",
            "name": "poclb",
            "resource_group_name": "poc_rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/backendAddressPools/BackendPool1",
            "loadbalancer_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb",
            "name": "BackendPool1",
            "resource_group_name": "poc_rg"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/probes/tcpProbe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb",
            "name": "tcpProbe",
            "number_of_probes": 2,
            "port": 8443,
            "protocol": "Tcp",
            "resource_group_name": "poc_rg"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/backendAddressPools/BackendPool1",
            "backend_port": 8443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 443,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb",
            "name": "LBRule",
            "probe_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/probes/tcpProbe",
            "protocol": "Tcp",
            "resource_group_name": "poc_rg"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.lb_probe",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend01-ext-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-backend01-ext-nic",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.90.2.101",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/External"
              }
            ],
            "location": "centralus",
            "name": "poc-backend01-ext-nic",
            "private_ip_address": "10.90.2.101",
            "private_ip_addresses": [
              "10.90.2.101"
            ],
            "resource_group_name": "poc_rg",
            "tags": {
              "Name": "f5env-backend01-ext-int",
              "application": "app1",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.External",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jb_nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-jb-nic-43b5",
            "ip_configuration": [
              {
                "name": "poc-jb-nic-43b5",
                "primary": true,
                "private_ip_address": "10.90.1.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-jb-43b5",
                "subnet_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/Mgmt"
              }
            ],
            "location": "centralus",
            "name": "poc-jb-nic-43b5",
            "private_ip_address": "10.90.1.6",
            "private_ip_addresses": [
              "10.90.1.6"
            ],
            "resource_group_name": "poc_rg",
            "tags": {
              "environment": "f5env"
            }
          },
          "dependencies": [
            "azurerm_public_ip.jb_public_ip",
            "azurerm_resource_group.main",
            "azurerm_subnet.Mgmt",
            "azurerm_virtual_network.main",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm01-ext-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-vm01-ext-nic",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.90.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/External"
              },
              {
                "name": "secondary",
                "primary": false,
                "private_ip_address": "10.90.2.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/External"
              }
            ],
            "location": "centralus",
            "name": "poc-vm01-ext-nic",
            "private_ip_address": "10.90.2.4",
            "private_ip_addresses": [
              "10.90.2.4",
              "10.90.2.11"
            ],
            "resource_group_name": "poc_rg",
            "tags": {
              "Name": "f5env-vm01-ext-int",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.main",
            "azurerm_subnet.External",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm01-mgmt-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-vm01-mgmt-nic",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.90.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-vm01-mgmt-pip",
                "subnet_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/Mgmt"
              }
            ],
            "location": "centralus",
            "name": "poc-vm01-mgmt-nic",
            "private_ip_address": "10.90.1.4",
            "private_ip_addresses": [
              "10.90.1.4"
            ],
            "resource_group_name": "poc_rg",
            "tags": {
              "Name": "f5env-vm01-mgmt-int",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          },
          "dependencies": [
            "azurerm_public_ip.vm01mgmtpip",
            "azurerm_resource_group.main",
            "azurerm_subnet.Mgmt",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm02-ext-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-vm02-ext-nic",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.90.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/External"
              },
              {
                "name": "secondary",
                "primary": false,
                "private_ip_address": "10.90.2.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/External"
              }
            ],
            "location": "centralus",
            "name": "poc-vm02-ext-nic",
            "private_ip_address": "10.90.2.5",
            "private_ip_addresses": [
              "10.90.2.5",
              "10.90.2.12"
            ],
            "resource_group_name": "poc_rg",
            "tags": {
              "Name": "f5env-vm01-ext-int",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.main",
            "azurerm_subnet.External",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm02-mgmt-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-vm02-mgmt-nic",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.90.1.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-vm02-mgmt-pip",
                "subnet_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/Mgmt"
              }
            ],
            "location": "centralus",
            "name": "poc-vm02-mgmt-nic",
            "private_ip_address": "10.90.1.5",
            "private_ip_addresses": [
              "10.90.1.5"
            ],
            "resource_group_name": "poc_rg",
            "tags": {
              "Name": "f5env-vm02-mgmt-int",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          },
          "dependencies": [
            "azurerm_public_ip.vm02mgmtpip",
            "azurerm_resource_group.main",
            "azurerm_subnet.Mgmt",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "bpool_assc_vm01",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/backendAddressPools/BackendPool1",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-vm01-ext-nic/ipConfigurations/secondary|/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/backendAddressPools/BackendPool1",
            "ip_configuration_name": "secondary",
            "network_interface_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-vm01-ext-nic"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.vm01-ext-nic",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.main",
            "azurerm_subnet.External",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "bpool_assc_vm02",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/backendAddressPools/BackendPool1",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-vm02-ext-nic/ipConfigurations/secondary|/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/loadBalancers/poclb/backendAddressPools/BackendPool1",
            "ip_configuration_name": "secondary",
            "network_interface_id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkInterfaces/poc-vm02-ext-nic"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.vm02-ext-nic",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.main",
            "azurerm_subnet.External",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jb_sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkSecurityGroups/poc-jb_sg-43b5",
            "location": "centralus",
            "name": "poc-jb_sg-43b5",
            "resource_group_name": "poc_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "f5env"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkSecurityGroups/poc-nsg",
            "location": "centralus",
            "name": "poc-nsg",
            "resource_group_name": "poc_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow HTTP access",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_HTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow HTTPS access",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_HTTPS",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow HTTPS access",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_APP_HTTPS",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow RDP access",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_RDP",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow SSH access",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Name": "f5env-bigip-sg",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "management_sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/networkSecurityGroups/poc-mgmt_sg-43b5",
            "location": "centralus",
            "name": "poc-mgmt_sg-43b5",
            "resource_group_name": "poc_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "f5env"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jb_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-jb-43b5",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.86.127.135",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "poc-jb-43b5",
            "resource_group_name": "poc_rg",
            "sku": "Standard",
            "tags": {
              "environment": "f5env"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "poclbpip",
            "fqdn": "poclbpip.centralus.cloudapp.azure.com",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "poc-lb-pip",
            "resource_group_name": "poc_rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm01mgmtpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-vm01-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "poc-vm01-mgmt-pip",
            "resource_group_name": "poc_rg",
            "sku": "Basic",
            "tags": {
              "Name": "f5env-vm01-mgmt-public-ip",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm02mgmtpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/publicIPAddresses/poc-vm02-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "poc-vm02-mgmt-pip",
            "resource_group_name": "poc_rg",
            "sku": "Basic",
            "tags": {
              "Name": "f5env-vm02-mgmt-public-ip",
              "application": "f5app",
              "costcenter": "f5costcenter",
              "environment": "f5env",
              "group": "f5group",
              "owner": "f5owner"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "External",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.90.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/External",
            "name": "External",
            "resource_group_name": "poc_rg",
            "virtual_network_name": "poc-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Mgmt",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.90.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network/subnets/Mgmt",
            "name": "Mgmt",
            "resource_group_name": "poc_rg",
            "virtual_network_name": "poc-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.90.0.0/16"
            ],
            "id": "/subscriptions/133b4595-a6bb-4ed1-a855-0732599eec71/resourceGroups/poc_rg/providers/Microsoft.Network/virtualNetworks/poc-network",
            "location": "centralus",
            "name": "poc-network",
            "resource_group_name": "poc_rg"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}